# bulldogent

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  LEARNING_PROGRESS.md  Makefile  PROJECT_PLAN.md  PROJECT_PROGRESS.md  README.md  docker-compose.test.yml  docker-compose.yaml  init-db.sql  pyproject.toml
config/: baseline.yaml.example  llm_provider.yaml  llm_provider.yaml.example  messages.yaml  messaging_platform.yaml  messaging_platform.yaml.example  observability.yaml.example  platforms.yaml.example  providers.yaml.example  teams.yaml.example  tool_operation_approval.yaml.example  tools.yaml.example
docs/: architecture.md  baseline.md  configuration.md
src/bulldogent/: __main__.py  approval.py  bot.py  teams.py
src/bulldogent/baseline/: __init__.py  __main__.py  chunker.py  composite_retriever.py  config.py  indexer.py  learner.py  models.py  retriever.py  summarizer.py  types.py
src/bulldogent/baseline/crawlers/: __init__.py  confluence.py  github.py  jira.py  local.py
src/bulldogent/embedding/: __init__.py  config.py  provider.py
src/bulldogent/embedding/adapters/: __init__.py  bedrock.py  openai.py  vertex.py
src/bulldogent/events/: __init__.py  __main__.py  config.py  emitter.py  models.py  sink.py  types.py
src/bulldogent/events/adapters/: snowflake.py
src/bulldogent/llm/provider/: __init__.py  config.py  factory.py  provider.py  registry.py  types.py
src/bulldogent/llm/provider/adapters/: __init__.py  bedrock.py  openai.py  vertex.py
src/bulldogent/llm/tool/: __init__.py  registry.py  tool.py  types.py
src/bulldogent/llm/tool/adapters/: __init__.py
src/bulldogent/llm/tool/adapters/confluence/: __init__.py  confluence.py  operations.yaml
src/bulldogent/llm/tool/adapters/github/: __init__.py  github.py  operations.yaml
src/bulldogent/llm/tool/adapters/jira/: __init__.py  jira.py  operations.yaml
src/bulldogent/llm/tool/adapters/knowledge/: __init__.py  knowledge.py  operations.yaml
src/bulldogent/llm/tool/adapters/teams/: __init__.py  operations.yaml  teams.py
src/bulldogent/llm/tool/adapters/web_search/: __init__.py  operations.yaml  web_search.py
src/bulldogent/messaging/: __init__.py
src/bulldogent/messaging/platform/: __init__.py  config.py  factory.py  platform.py  registry.py  types.py
src/bulldogent/messaging/platform/adapter/: __init__.py  discord.py  slack.py  teams.py  telegram.py
src/bulldogent/util/: __init__.py  db.py  logging.py  yaml.py
src/slackbot/: __main__.py  config.py  log_config.py  main.py
src/slackbot/llm/: __init__.py  openai_provider.py  provider.py  types.py
src/slackbot/llm/provider/: __init__.py  config.py  factory.py  provider.py  registry.py  types.py
src/slackbot/llm/provider/adapters/: __init__.py  bedrock.py  openai.py  vertex.py
src/slackbot/llm/tool/: __init__.py  tool.py  types.py
src/slackbot/messaging/: __init__.py
src/slackbot/messaging/platform/: __init__.py  config.py  factory.py  platform.py  registry.py
src/slackbot/messaging/platform/adapter/: __init__.py  discord.py  slack.py  teams.py  telegram.py
src/slackbot/util/: __init__.py  yaml.py
tests/: test_approval.py  test_baseline_db.py  test_bot.py  test_config.py  test_event_emitter.py  test_event_models.py  test_github_crawler.py  test_logging.py  test_placeholder.py  test_retriever.py  test_teams.py
