[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bulldogent"
version = "0.1.0"
description = "bulldogent for LLM provider integration and digestion of data from various sources"
requires-python = ">=3.12"
dependencies = [
    "slack-bolt>=1.18",
    "openai>=1.0",
    "jira>=3.8",
    "PyGithub>=2.1",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "boto3>=1.40.70",
    "google-cloud-aiplatform>=1.38",
    "botbuilder-core>=4.14",
    "aiohttp>=3.9",
    "discord.py>=2.3",
    "pyTelegramBotAPI>=4.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.8",
    "pre-commit>=3.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["jira.*", "github.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--cov=bulldogent", "--cov-report=term-missing"]