[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bulldogent"
version = "0.1.0"
description = "bulldogent for LLM provider integration and digestion of data from various sources"
requires-python = ">=3.12,<3.14"
dependencies = [
    "slack-bolt>=1.18",
    "openai>=1.0",
    "atlassian-python-api>=4.0",
    "PyGithub>=2.1",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "boto3>=1.40.70",
    "google-cloud-aiplatform>=1.38",
    "aiohttp>=3.9",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.8",
    "pre-commit>=3.5",
]

[tool.setuptools.package-data]
bulldogent = ["**/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "S", "C4", "SIM"]
ignore = [
    "S101",   # assert used in tests
    "S104",   # binding to all interfaces — not relevant
    "S603",   # subprocess call with untrusted input — not relevant
    "S607",   # partial executable path in subprocess — not relevant
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["atlassian.*", "github.*", "tiktoken.*", "opentelemetry.*", "pgvector.*", "snowflake.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "bulldogent.llm.tool.adapters.jira.*",
    "bulldogent.llm.tool.adapters.confluence.*",
    "bulldogent.baseline.indexer",
    "bulldogent.baseline.crawlers.*",
]
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--cov=bulldogent", "--cov-report=term-missing"]
